fix cherry-pick conflict

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eject": "expo eject",
     "test": "node node_modules/jest/bin/jest.js",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
-    "cp:config": "cp config.sample.ts config.ts"
+    "cp:config": "cp config.sample.ts config.ts",
+    "storybook": "start-storybook -p 7007"
   },
   "private": true,
   "version": "0.0.0",
@@ -59,6 +60,11 @@
     "@dooboo/eslint-config": "^0.2.0",
     "@testing-library/react-hooks": "^2.0.3",
     "@testing-library/react-native": "^4.0.12",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react-native": "^5.2.1",
+    "@storybook/react-native-server": "^5.2.1",
     "@types/expo": "^32.0.13",
     "@types/i18n-js": "^3.0.1",
     "@types/jest": "^24.0.18",
@@ -69,6 +75,7 @@
     "@types/styled-components": "^4.1.19",
     "apsl-react-native-button": "^3.1.1",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-expo": "^7.0.0",
     "babel-preset-react-native": "4.0.1",
