--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "lib": ["es2017"],
     "module": "es2015",
     "moduleResolution": "node",
+    "rootDirs": ["src", "stories"],
     "resolveJsonModule": true,
     "noEmit": true,
     "noImplicitAny": true,
